--- a/angular.json
+++ b/angular.json
@@ -30,10 +30,10 @@
               "src/styles.sass"
             ],
             "scripts": [
-              "../node_modules/p5/lib/p5.min.js",
-              "../node_modules/p5/lib/addons/p5.sound.js",
-              "../node_modules/p5/lib/addons/p5.dom.js",
-              "../node_modules/ml5/dist/ml5.min.js"
+              "./node_modules/p5/lib/p5.min.js",
+              "./node_modules/p5/lib/addons/p5.sound.js",
+              "./node_modules/p5/lib/addons/p5.dom.js",
+              "./node_modules/ml5/dist/ml5.min.js"
             ],
             "es5BrowserSupport": true
           },
